# GPS-System

./: .gitignore  CMakeLists.txt  Emualtor.py  MCU.cpp  README.md  REST.js  client.cpp  client_device_mapping.txt  gps_data.txt  package-lock.json  package.json  packets.txt  server.cpp
MCU/: .mxproject  CMakeLists.txt  LCD.ioc  LCD.launch
MCU/Core/Inc/: ringQueue.h  stm32f1xx_hal_conf.h
MCU/Core/Src/: LCD1602.c  main.c  ringQueue.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
MCU/Core/Startup/: startup_stm32f103c8tx.s
include/: gpsTypes.h  mongoose.h  packet.h  queue.h
libs/: logger.cpp  logger.h  server.h
libs/mongoose/: mongoose.c  mongoose.h
net/: CMakeLists.txt  QuectelEC200U.h  mongoose.c  net.cpp  net.h  packet.cpp
unit/: CMakeLists.txt  io.h  sensor.cpp  sensor.h  unit.cpp  unit.h
web/: index.html
